# Project_Eye_Of_Odin

./: .gitignore  PLAN_IMPLEMENTATION.md  README.md  README_.md  VersionHistory.txt  structure_tree.txt
src/csi_camera/: README.md  package.xml  setup.py
src/csi_camera/csi_camera/: csi_camera_node.py  usb_camera_node.py
src/csi_camera/launch/: csi_cameras.launch.py  csi_cameras.launch_.py  detect_cameras.py
src/lidar/: CMakeLists.txt  package.xml
src/lidar/launch/: sllidar_s2_launch.py  view_sllidar_s2_launch.py
src/observer/: PLAN_IMPLEMENTATION.md  README.md  ReadMe.md  package.xml  setup.cfg  setup.py
src/observer/app/: main.py
src/observer/app/static/css/: style.css
src/observer/app/static/js/: main.js
src/observer/app/templates/: dashboard.html
src/observer/bridge/: zmq_bridge.py
src/observer/launch/: observer.launch.py
src/observer/observer/: camera_feed_widget.py  control_interface_widget.py  data_analysis_widget.py  data_fusion_widget.py  history_notification_widget.py  lidar_view_widget.py  main.py  main_camera_widget.py  mission_planning_widget.py  ros2_listener.py  status_panel_widget.py
src/observer/test/: preview.py
src/odin_bridge/: package.xml  setup.cfg  setup.py
src/odin_bridge/launch/: odin_bridge.launch.py
src/odin_bridge/odin_bridge/: __init__.py  bridge_node.py
src/odin_bridge/odin_bridge/utils/: __init__.py  converters.py
src/project_eye_of_odin/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/project_eye_of_odin/launch/: csi_cameras.launch.py  detect_cameras.py  project_eye_of_odin.launch.py
src/project_eye_of_odin/project_eye_of_odin/: csi_camera_node.py
src/sllidar_ros2/: CMakeLists.txt
src/sllidar_ros2/.clangd/index/: abs_rxtx.h.F14770E918E3BB43.idx  arch_linux.h.F3C1DF32FA4536CF.idx  assert.h.9826DB6A764478F5.idx  byteops.h.BEC89846CFAA6891.idx  byteorder.h.C13450060BFE390E.idx  dataunnpacker_commondef.h.9FC5789464244466.idx  dataunnpacker_internal.h.9C3526451AF9F298.idx  (+46 more)
src/sllidar_ros2/launch/: sllidar_c1_launch.py  sllidar_s2_launch.py  view_sllidar_s2_launch.py
src/sllidar_ros2/src/: sllidar_node.cpp
ws/Camera/: simple_camera2.py  simple_camera3.py  test.yuvZone.Identifier
ws/Lidar/: CMakeLists.txt  CMakeLists.txtZone.Identifier  sllidar_client.cppZone.Identifier  sllidar_node.cppZone.Identifier  sllidar_s2_launch.pyZone.Identifier  view_sllidar_s2_launch.pyZone.Identifier
