<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_eye_of_odin</name>
  <version>0.0.1</version>
  <description>Meta package for CSI camera and SLLIDAR integration</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>csi_camera</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
